fix responsiveness and alignment issues

--- a/app/functions/[id]/page.module.css
+++ b/app/functions/[id]/page.module.css
@@ -13,8 +13,9 @@
 }
 
 .codeBlock {
-  width: 50rem;
+  width: 100%;
   height: 75vh;
+  max-width: 50rem;
   border: 1px solid var(--secondary-transparent);
   background-color: var(--dark-gray);
   padding: 1rem;
